--- a/FredsWorkmate/FredsWorkmate.csproj
+++ b/FredsWorkmate/FredsWorkmate.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="6.1.1" />
     <PackageReference Include="UUIDNext" Version="4.0.0" />
   </ItemGroup>
 
